--- a/src/App.css
+++ b/src/App.css
@@ -886,6 +886,42 @@
 }
 
 /*========== GitHub Language Skills ==========*/
+/*=============== GitHub Stats ===============*/
+
+.cyber-resume .github-stats-view {
+  color: var(--color-neon-success);
+}
+
+.cyber-resume .github-stats-view h3 {
+  font-size: var(--text-2xl);
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.cyber-resume .github-stats-view div {
+  margin: 10px 0;
+}
+
+.cyber-resume .github-stats-view h4 {
+  display: inline;
+}
+
+.cyber-resume .github-stats-view span {
+  padding: 10px
+}
+
+.cyber-resume .github-stats-view ul {
+  margin: var(--space-1) 0 0 var(--space-4);
+  padding: 0;
+}
+
+.cyber-resume .github-stats-view li {
+  margin:  0;
+  padding: 0;
+}
+
+/*=============== GitHub Stats ===============*/
 /* ============================================= Technical Skills ============================================*/
 /* =============================================== Soft Skills ===============================================*/
 
