--- a/src/App.css
+++ b/src/App.css
@@ -448,7 +448,7 @@
   grid-row: 34 / -1;
   animation-delay: 3.6s;
   margin: 0;
-  overflow: hidden;
+  overflow: visible;
 }
 .cyber-resume .box-9 {
   grid-column: 35 / span 9;
@@ -675,7 +675,7 @@
 }
 
 .folder-tab.active {
-  z-index: 10;
+  z-index: 5;
   animation: neonIgnite 1s ease-out both,
     neonFlicker 0.15s ease-in-out 1s infinite;
   animation-delay: 2s;
@@ -752,8 +752,13 @@
 .cyber-resume .box-8 {
   border: var(--color-neon-primary) solid 1px;
   border-radius: 5px;
-  background: #0080ff30;
-  animation: holoSlateGlow 5s ease-in-out infinite;
+  /* background: rgba(0, 128, 255, 0.188); */
+   background: linear-gradient(
+    125deg,
+    rgba(0, 128, 255, 0.188) 70%,
+    rgba(0, 80, 255, 0.65) 100%
+  );
+  /* animation: holoSlateGlow 5s ease-in-out infinite; */
   box-shadow: 0 0 4px var(--color-neon-primary),
     0 0 8px var(--color-neon-primary), inset 0 0 4px var(--color-neon-primary),
     inset 0 0 12px var(--color-neon-primary),
@@ -767,7 +772,6 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 .cyber-resume .box-8 .holo-map-container .bg-layer {
@@ -782,6 +786,7 @@
 
 .cyber-resume .box-8 .holo-map-container .bg-layer.bg-base {
   background-image: url("./src/assets/dataSlate/dataSlateBackground.png");
+  position: relative;
   z-index: 1;
   opacity: 0.8;
   animation: holoSlateGlow 3s ease-in-out infinite;
@@ -809,31 +814,26 @@
 
 .cyber-resume .box-8 .holo-map-container .map-node {
   position: absolute;
-  z-index: 5;
+  z-index: 11;
 }
 
 .cyber-resume .box-8 .holo-map-container .map-node.yellow {
   background: #ffffff;
   box-shadow: 0 0 8px #fff700, inset 0 0 20px #fff700;
   filter: brightness(0.8);
-  z-index: 6;
 }
 .cyber-resume .box-8 .holo-map-container .map-node.red {
   background: #ffffff;
   box-shadow: 0 0 8px #ff0019, inset 0 0 20px #ff0019;
   filter: brightness(0.8);
-  z-index: 6;
 }
 .cyber-resume .box-8 .holo-map-container .map-node.green {
   background: #ffffff;
   box-shadow: 0 0 8px #00ff33, inset 0 0 20px #00ff33;
   filter: brightness(0.8);
-  z-index: 6;
 }
 
-.cyber-resume .box-8 .holo-map-container .map-node.green .node-tooltip,
-.cyber-resume .box-8 .holo-map-container .map-node.red .node-tooltip,
-.cyber-resume .box-8 .holo-map-container .map-node.yellow .node-tooltip {
+.cyber-resume .box-8 .holo-map-container .map-node .node-tooltip {
   background: linear-gradient(
     135deg,
     rgba(0, 180, 255, 0.85) 60%,
@@ -857,7 +857,7 @@
   max-width: 200px;
   height: auto;
 
-  z-index: 100;
+  z-index: 9999;
   white-space: pre-line;
   overflow: hidden;
 }
@@ -1261,7 +1261,7 @@
   text-shadow: 0 0 8px var(--color-neon-primary), 0 0 2px #fff;
   pointer-events: none;
   animation: batteryXpFloat 1.1s ease-out forwards;
-  z-index: 10;
+  z-index: 5;
 }
 
 /*================================================== Battery ==================================================*/
