--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 
