--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   padding: var(--space-2);
-  overflow: visible;
+  overflow: scroll;
   background: var(--color-bg-dark);
 }
 
@@ -46,10 +46,11 @@
 /* =============================================== Grid Boxes ===============================================*/
 
 .sheet-container {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(49, 1fr);
   grid-template-rows: repeat(64, 1fr);
-  position: relative;
+  position: relative; */
+  /* overflow: scroll; */
 }
 
 .resume-front {
@@ -57,7 +58,14 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  gap: var(--space-3, 1rem);
+  gap: var(--space-1);
+  
+}
+
+.resume-front .resume-columns {
+  display: grid;
+    grid-template-columns: 1fr 43mm;
+
 }
 
 .resume-front .box-1,
@@ -77,10 +85,8 @@
 
 .sheet-wrapper {
   position: relative;
-  aspect-ratio: 208 / 269;
-  width: 100%;
-  max-height: 100vh;
-  max-width: 100vw;
+  width: 208mm;
+  height: 269mm;
   padding: var(--space-2);
   box-sizing: border-box;
   transform-style: preserve-3d;
@@ -101,6 +107,7 @@
 }  */
 
 /* =============================================== Grid Boxes ===============================================*/
+/* =========================================== Front / Back Faces ===========================================*/
 
 .sheet-face {
   width: 100%;
@@ -123,6 +130,7 @@
     ),
     var(--color-paper);
   transition: background 0.4s ease-out;
+  overflow: scroll;
 }
 
 .sheet-face.back-face {
@@ -167,11 +175,13 @@
   transform: scale(1.05);
 }
 
-/* Resume Front Styling */
+/* =========================================== Front / Back Faces ===========================================*/
+/* ====================================== General Styles Resume Front ======================================*/
 
 .resume-front .resume-header {
   text-align: center;
   border-bottom: 2px solid var(--color-ink);
+  margin-bottom: var(--space-6);
 }
 
 .resume-front .resume-header h1 {
@@ -183,7 +193,7 @@
 
 .resume-front .resume-header .contact-info {
   margin: 0 0 var(--space-6) 0;
-  font-size: var(--text-sm);
+  font-size: var(--text-xs);
   color: var(--color-ink);
   font-weight: 400;
 }
@@ -216,7 +226,7 @@
 
 .resume-front h4 {
   margin: 0;
-  font-size: var(--text-xs);
+  font-size: var(--text-2xs);
   font-weight: 600;
   color: var(--color-ink);
 }
@@ -224,7 +234,7 @@
 .resume-front .tech-stack,
 .resume-front .company-period,
 .resume-front .program-period {
-  font-size: var(--text-xs);
+  font-size: var(--text-2xs);
   color: var(--color-ink-light);
   font-style: italic;
 }
@@ -233,38 +243,39 @@
   margin: 0 0 var(--space-1) 0;
   line-height: 1.3;
   color: var(--color-ink);
-  font-size: var(--text-xs);
+  font-size: var(--text-2xs);
   font-weight: 500;
 }
 
 .resume-front ul {
-  margin: 0 0 var(--space-2) 0;
-  padding-left: var(--space-6);
+  margin: 0 0 var(--space-1) 0;
+  padding-left: var(--space-4);
 }
 
 .resume-front li {
   margin-bottom: 0;
   line-height: 1.2;
   color: var(--color-ink);
-  font-size: var(--text-xs);
+  font-size: var(--text-2xs);
   font-weight: 500;
 }
 
 .resume-front .projects-section h3 {
-  margin-top: var(--space-3);
+  margin-top: var(--space-1);
 }
 
 .resume-front .project-item,
 .resume-front .experience-item,
 .resume-front .education-item {
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-1);
 }
 
 .resume-front .technical-skills-section h4 {
-  font-size: var(--text-xs);
+  font-size: var(--text-2xs);
   font-style: bold;
 }
 
+/* ====================================== General Styles Resume Front ======================================*/
 /* =============================================== Pixel Hero ===============================================*/
 
 /* .hero-wrapper {
@@ -277,7 +288,7 @@
   top: var(--space-1);
   left: var(--space-1);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
   justify-content: flex-end;
 
@@ -305,9 +316,9 @@
   border-radius: var(--radius-md);
   border: 2px solid var(--color-ink);
   box-shadow: var(--shadow-paper);
-  font-size: var(--text-sm);
-  max-width: 250px;
-  min-width: 150px;
+  font-size: var(--text-2xs);
+  max-width: 63vw;
+  min-width: 50vw;
   white-space: normal;
   word-wrap: break-word;
   line-height: 1.4;
