--- a/src/App.css
+++ b/src/App.css
@@ -64,8 +64,8 @@
 
 .resume-front .resume-columns {
   display: grid;
-    grid-template-columns: 1fr 43mm;
-
+  grid-template-columns: 1fr 43mm;
+  gap: var(--space-2);
 }
 
 .resume-front .box-1,
@@ -213,7 +213,20 @@
 
 .resume-front h3 {
   display: inline-block;
-  margin: 0 0 var(--space-1) 0;
+  margin: var(--space-2) 0 var(--space-1) 0;
+  font-size: var(--text-base);
+  font-weight: 850;
+  color: var(--color-ink-blue);
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
+  border-bottom: 1px solid var(--color-ink-blue);
+  line-height: 0.9;
+  width: auto;
+}
+
+.resume-front .box-3 .projects-section h3 {
+    display: inline-block;
+  margin: var(--space-2) 0 var(--space-1) 0;
   font-size: var(--text-base);
   font-weight: 850;
   color: var(--color-ink-blue);
@@ -226,7 +239,7 @@
 
 .resume-front h4 {
   margin: 0;
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   font-weight: 600;
   color: var(--color-ink);
 }
@@ -234,7 +247,7 @@
 .resume-front .tech-stack,
 .resume-front .company-period,
 .resume-front .program-period {
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   color: var(--color-ink-light);
   font-style: italic;
 }
@@ -243,7 +256,7 @@
   margin: 0 0 var(--space-1) 0;
   line-height: 1.3;
   color: var(--color-ink);
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   font-weight: 500;
 }
 
@@ -256,7 +269,7 @@
   margin-bottom: 0;
   line-height: 1.2;
   color: var(--color-ink);
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   font-weight: 500;
 }
 
@@ -271,8 +284,18 @@
 }
 
 .resume-front .technical-skills-section h4 {
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   font-style: bold;
+}
+
+.resume-front .technical-skills-section,
+.resume-front .soft-skills-section{
+  margin-bottom: var(--space-3);
+}
+
+.resume-front .projects-section,
+.resume-front .experience-section {
+  margin-bottom: var(--space-2);
 }
 
 /* ====================================== General Styles Resume Front ======================================*/
