--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@
   --space-8: 2rem; /* 32px */
   --space-12: 3rem; /* 48px */
   --space-16: 4rem; /* 64px */
+  --space-24: 6rem; /* 96px */
 
   /* border & radius */
   --radius-sm: 4px;
