--- a/src/App.css
+++ b/src/App.css
@@ -83,12 +83,12 @@
 
 .sheet-wrapper {
   position: relative;
-  width: 100vw;
-  height: calc(90vh);
+  width: 95vw;
+  height: calc(80vh);
   
 
   padding: var(--space-2) var(--space-2) var(--space-2) var(--space-2);
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   transform-style: preserve-3d;
   transition: transform var(--transition-flip);
 }
