--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@
   --text-color: var(--color-neon-secondary);
   --accent-color: var(--color-neon-success);
 }
-body {
+body, html {
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -81,7 +81,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: scroll;
+  overflow: auto;
 }
 
 
